src/App.css
:root {
    /* variables */

    /* color-schemes TBD */

    /* --button-background: #1E1E1E; */
    /* --page-background: #444444; */
    
    /* --button-background: #FF7EA8; */
    /* --page-background: #FFC1D3; */

    --button-background: #D8323C;
    --page-background: #0C0E0C;
    --light-color: #EAEBEA;
}

#root {
    max-width: 1280px;
    margin: 0 auto;
    padding: 2rem;
    text-align: center;
    font-family: Hack, monospace;
}

body {
    background-color: var(--page-background);
}

.SearchEngineWrapper {
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
    flex-wrap: wrap;
    width: 100%;
}

.SearchEngineButton {
    display: flex;
    align-items: center;
    justify-content: center;
    margin-inline: 1px;
    padding: 0.5em;
    border: none;
    border-radius: 8px 8px 0px 0px;
    background-color: var(--button-background);
    color: white;
    width: 49.7%;
    height: 2.4em;
    font-size: 20px;
    cursor: pointer;
}
 
.SearchEngineButtonWrapper {
    display: flex;
    flex-direction: row;
    wrap: no-wrap;
    width: 100%;
    align-items: end;
    position: relative;
}

.SearchEngineName {
    margin-right: 1em;
}

.SearchEngineLogo {
    width: 1.5em;
    height: 1.5em;
    margin-right: 1em;
    transition: filter 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
}

.SelectedSearchEngine {
    height: 2.90em;
    border-top: thick solid var(--light-color);
}

.SelectedSearchEngine:hover, .SelectedSearchEngine:focus {
  outline: none;
}

/* make it glow */
.linkButton:hover .linkLogo,
.SearchEngineButton:hover .SearchEngineLogo,
.SelectedSearchEngine .SearchEngineLogo {
    filter: invert(100%) sepia(0%) saturate(7480%) hue-rotate(174deg) brightness(105%) contrast(100%) drop-shadow(0 0 0.2rem var(--light-color));
}

#SearchField {
    outline: 0; 
    width: 100%;
    background: var(--light-color);
    margin-top: .1em;
    padding: 0 1.6rem;
    padding-right: 2.5em;
    border-radius: 6px;
    z-index: 1;
    position: relative;
    height: 1.9em;
    border: 0;
    color: #2f2f2f;
    font-size: 1.8rem;
}

#ReverseImageSearch {
    position: absolute;
    top: 50%;
    right: 5px;
    transform: translateY(-50%);
    width: 2.7em;
    height: 2.7em;
    z-index: 1;
    background-image: url('./assets/camera.svg');
    background-size: contain;
    background-repeat: no-repeat;
    cursor: pointer;
}

#ReverseImageSearch svg path{
    stroke: var(--light-color);
}

.linksWrapper {
    box-sizing: border-box;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    margin: 0.5em;
    margin-top: 4em;
    gap: 1em;
    text-align: center;
}

.linkButton {
    display: flex;
    flex-wrap: wrap;
    width: 7em;
    height: 5em;
    padding: 1em;
    vertical-align: middle;
    flex: 0 0 30%;
    border: none;
    border-radius: 4px;
    background-color: var(--button-background);
}

.linkLogo {
    width: 100%;
    height: 2em;
    transition: filter 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
}

.linkName {
    font-size: 1.25em;
    display: block;
    width: 100%;
    font-family: Hack, monospace;
    margin-bottom: 2em;
}

.lain {
    width: 15vw;
    position:fixed;
    bottom: 0;
    right: 0;
    white-space: nowrap;
}

.searchBarAndReverse {
    position:relative;
    width: 100%;
}

